<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Swoosh</string>

    <string name="title_part1">Go all in</string>
    <string name="title_part2">On going all out</string>
    <string name="title_part3">Find a team on your city, and dominate the league</string>
    <string name="start_button">Get started!</string>

    <string name="league">Desired league:</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="coed">Co-ed</string>
    <string name="next_button">Next</string>

    <string name="skill">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="finish_button">Finish</string>
    <string name="select_skill">Select a skill level!</string>

    <string name="searching">Looking for a <xliff:g example="women" id="league">%s</xliff:g> <xliff:g example="beginner" id="skill">%s</xliff:g> league near you...</string>


    <string name="welcome_im">Background image of first screen</string>
    <string name="league_im">Background image of second screen</string>
    <string name="skill_im">Background image of third screen</string>
    <string name="finish_im">Background image of last screen</string>
    <string name="logo">Logo of the app</string>


</resources>